# frailty_graph_viz

./: .env  .gitignore  annotations.py  build_network.py  docker-compose.yml  environment.yml  main.py  models.py  package-lock.json  prototype.html  pyproject.toml  rankings.py  requirements.pip  start_backend.sh  utils.py
backend/: Dockerfile  api.py  build_network.py  cli_parser.py  config.py  dependencies.py  models.py  network.py  requirements.txt  start.py  utils.py  viz_api.py
backend/app/: dependencies.py  viz_api.py
backend/backend/: api.py  models.py  rankings.py  start.py  utils.py
backend/backend/evidence_index/: __init__.py  client.py
backend/backend/sql_app/: models.py
backend/evidence_index/: client.py  create_evidence_index.py
backend/sql_app/: README.md  database.py  schemas.py
documentation/: weighting.md
evidence_index/: __init__.py  client.py  create_evidence_index.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  BlobViz.jsx  Chevron.css  EntitySearchResultItem.jsx  EvidenceIndex.js  NetworkViz.css  NetworkViz.jsx  Overview.jsx  StructuredSearch.jsx  config.js  config.json  index.js  index_interface.css  utils.js  viz.html
frontend/src/components/: EvidencePanel.js  (+5 more)
sql_app/: __init__.py  crud.py  database.py  models.py  schemas.py
static/: evidence.html  evidenceindex.html  index.html  overview.html  overview_graph.html  react.html  utils.js  viz.html
static/components/: EvidenceTaggerPanel.css  EvidenceTaggerPanel.js  IndexInterface.js
(+22 files in other folders)
