[tool.poetry]
name = "frailty_graph_viz"
version = "0.1.0"
description = ""
authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.5"
fastapi = "^0.74.1"
networkx = "^2.7"
plac = "^1.3.4"
tqdm = "^4.63.0"
SQLAlchemy = "^1.4.31"
elasticsearch = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
